spinner fixed on mobile devices, one work project changed

--- a/src/index.scss
+++ b/src/index.scss
@@ -152,19 +152,21 @@
 		justify-content: center;
 		flex-direction: column;
 		position: relative;
-		min-width: 60px;
 		left: 0;
-		transform: translate(-42%, 0%);
+		transform: translate(-50%, 0%);
 	}
 	&-loader-spinner {
 		margin: 0 auto;
 		font-size: 14px;
-		width: 1em;
-		height: 1em;
+		width: 0.8em;
+		height: 0.8em;
 		border-radius: 50%;
 		text-indent: -9999em;
 		animation: mulShdSpin 1.1s infinite ease;
-		transform: translateZ(0);
+		transform: translateZ(0) scale(1);
+		@media screen and (max-width: 449px) {
+			transform: translateZ(0) scale(0.75);
+		}
 	}
 	&-loader-procent {
 		margin: 0 auto;
